[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic_sam"
version = "1.1.0"
description = "Segment and Recognize Anything at Any Granularity."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]

dependencies = [
    "torch==1.13.1",
    "torchvision==0.14.1",
    "pillow",
    "opencv-python",
    "pyyaml",
    "json_tricks",
    "yacs",
    "scikit-learn",
    "pandas",
    "timm",
    "numpy",
    "einops",
    "transformers",
    "sentencepiece",
    "ftfy",
    "regex",
    "nltk",
    "vision-datasets",
    "cython",
    "pycocotools",
    "diffdist",
    "pyarrow",
    "cityscapesscripts",
    "shapely",
    "scikit-image",
    "mup",
    "accelerate",
    "kornia",
    "deepspeed",
    "wandb",
    "infinibatch",
    "gradio",     
    "openai-whisper",    
]

[tool.poetry.dependencies]
detectron2 = {git = "https://github.com/MaureenZOU/detectron2-xyz.git"}


[project.urls]
"Paper" = "https://arxiv.org/abs/2307.04767"
"Code" = "https://github.com/UX-Decoder/Semantic-SAM"
"Bug Tracker" = "https://github.com/UX-Decoder/Semantic-SAM/issues"

[tool.setuptools.packages.find]
exclude = ["assets*"]

[tool.wheel]
exclude = ["assets*"]
